# industrial_robotics_ros2_pico

./: .gitignore
differential/diff_project/: CMakeLists.txt  diff_app.cpp
differential/diff_project/robot/: DiffDrive.cpp  DiffDrive.h
differential/diff_project/sensor/: LimitSwitch.h  TEMT6000.cpp  bmi160.hpp  mpu9250.cpp  ultrasonic_sensor.hpp
differential/pin_tests/: CMakeLists.txt  pin_tests.c
differential/speed_controller/: speed_controller.c
differential/stop_obstacle/: CMakeLists.txt  stop_obstacle.c
differential/uros_diff_class/: .gitignore  CMakeLists.txt  README.md  pico_uart_transports.h  uros_diff_obj.cpp
differential/uros_diff_class/motor/: PrecisionMotor.cpp  PrecisionMotor.h  ServoMotor.h
differential/uros_diff_class/robot/: DiffDrive.cpp  DiffDrive.h
differential/uros_diff_class/sensor/: MPS20N0040D.cpp  bmi160.cpp  madgwick_filter.cpp  madgwick_filter.hpp  mpu9250.hpp  ultrasonic_sensor.cpp
labs/analog_io/: CMakeLists.txt  analog_io.c
labs/blink/: Blink2.c  CMakeLists.txt
labs/button_test/: CMakeLists.txt  button_test.c
labs/encoder_excel/: CMakeLists.txt  encoder_excel.c
labs/main_uros_pot_tf2/: CMakeLists.txt  main_uros_pot_tf2.c
labs/main_uros_pot_tf2/libmicroros/include/rcl_action/: version.h
labs/main_uros_pot_tf2/libmicroros/include/rcl_lifecycle/: version.h
labs/position_controller/: CMakeLists.txt  position_controller.c
labs/read_encoder_ticks/: CMakeLists.txt  read_encoder_ticks.c
labs/read_serial_input_servo/: CMakeLists.txt  read_serial_input_servo.c
labs/robotics_classes/: CMakeLists.txt  example_usage.cpp
labs/robotics_classes/motor/: PrecisionMotor.cpp  PrecisionMotor.h
labs/robotics_classes/rov/: ROV.cpp  ROV.h  example_rov_usage.cpp  rov_doc.md
labs/robotics_classes/sensor/: MPS20N0040D.cpp
labs/speed_controller/: CMakeLists.txt  speed_controller.c
labs/timer_interrupts/: CMakeLists.txt  timer_interrupts.c
rov/pin_tests/: pin_tests.c
rov/rov_project/: CMakeLists.txt  rov_app.cpp
rov/rov_project/rov/: ROV.cpp  ROV.h
rov/rov_project/sensor/: MPS20N0040D.h  SOIL_MOIST.cpp  SOIL_MOIST.h
rov/uros_rov_class/: CMakeLists.txt  uros_rov_obj.cpp
rov/uros_rov_class/rov/: ROV.cpp  ROV.h
rov/uros_rov_class/sensor/: MPS20N0040D.cpp  MPS20N0040D.h  SOIL_MOIST.cpp  SOIL_MOIST.h
scara/home_routine/: CMakeLists.txt  home_routine.c
scara/home_routine_fn/: CMakeLists.txt  home_routine_fn.c
scara/home_routine_fn/motor/: motor.c
scara/home_routine_fn/pwm/: pwm.h
scara/homw_routine_fn/: home_routine_fn.c
scara/homw_routine_fn/motor/: motor.h
scara/homw_routine_fn/pwm/: pwm.c
scara/mv_joints/: CMakeLists.txt  mv_joints.c
scara/pin_tests/: pin_tests.c
scara/scara_project/: CMakeLists.txt  scara_app.cpp  servo_demo.cpp
scara/scara_project/motor/: Motor.cpp  Motor.h  PrecisionMotor.cpp  PrecisionMotor.h  ServoMotor.cpp
scara/scara_project/scara/: Joint.cpp  Joint.h  ScaraRobot.cpp  ServoJoint.cpp  ServoJoint.h
scara/scara_project/sensor/: LimitSwitch.cpp
scara/uros_scara_class/: CMakeLists.txt  uros_scara_obj.cpp
scara/uros_scara_class/motor/: Motor.cpp  PrecisionMotor.cpp  PrecisionMotor.h  ServoMotor.cpp  ServoMotor.h
scara/uros_scara_class/scara/: Joint.cpp  Joint.h  ScaraRobot.cpp  ScaraRobot.h  ServoJoint.cpp  ServoJoint.h
scara/uros_scara_class/sensor/: HCSR05.cpp  HCSR05.h  TEMT6000.h
